# eggv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  fmt.sh  full-render-graph.json  nodemon.json  test-pillars.blend  test.rg.json  trivial-deferred.json
inc/: app.h  bundle.h  cmmn.h  debug_shapes.h  deferred_nodes.h  device.h  ecs.h  eggv_app.h  geometry_set.h  mem_arena.h  mesh.h  mesh_gen.h  ndcommon.h  par_shapes.h  physics.h  renderer.h  renderer_basic_nodes.h  scene_components.h  scene_graph.h  swap_chain.h
src/: app.cpp  bundle.cpp  debug_shapes.cpp  deferred_nodes.cpp  device.cpp  ecs.cpp  eggv_app.cpp  geometry_set.cpp  import.cpp  main.cpp  mesh.cpp  mesh_gen.cpp  physics.cpp  renderer.cpp  renderer_graph_compiler.cpp  renderer_gui.cpp  scene_components.cpp  scene_graph.cpp  script_runtime.cpp  swap_chain.cpp
src/shaders/: directional-light.frag.glsl  entire-screen.vert.glsl  full.vert.glsl  gbuffer.frag.glsl  lighting.h  multiview-simple.vert.glsl  nop.frag.glsl  point-light.frag.glsl  point-light.vert.glsl  simple.frag.glsl  simple.tesscontrol.glsl  simple.tesseval.glsl  simple.vert.glsl  solid-color.frag.glsl
